--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -1,8 +1,8 @@
 # some information about you
-name: "John Doe"
-nickname: "John"
+name: "Deft Embedded"
+nickname: "Deft Embedded"
 # greeting message before your name. it will default to "Hi! I am" if not provided
-greeting: "Hi, I am"
+greeting: "Hi, we are"
 image: "images/author/john.png"
 # give your some contact information. they will be used in the footer
 contactInfo:
@@ -14,8 +14,9 @@ contactInfo:
 
 # some summary about what you do
 summary:
-  - I am a Developer
-  - I am a Devops
-  - I love servers
-  - I work on open-source projects
-  - I love to work with some fun projects
+  - We are Engineers
+  - We are Devops
+  - We love Python
+  - We love C
+  - We love C++
+  - We love to work with some fun projects
