--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
-baseURL: https://hugo-toha.github.io
+baseURL: https://deftembedded.com
 
 languageCode: en-us
-title: "John's Blog"
+title: "Deft Embedded"
 
 # Use Hugo modules to add theme
 module:
@@ -64,7 +64,7 @@ params:
     favicon: /images/site/favicon.png
 
   # GitHub repo of your site
-  gitRepo: https://github.com/hugo-toha/hugo-toha.github.io
+  gitRepo: https://github.com/chrisrammy/deftembedded
   # Default branch of your Git repo
   gitBranch: main
 
@@ -140,7 +140,7 @@ params:
 
     # Enable Analytics
     analytics:
-      enabled: true
+      enabled: false
       services:
         # Google Analytics
         google:
